force-app/main/default/objects/Opportunity/fields/OPP_Special_Project__c.field-meta.xml
<CustomField>
    <fullName>OPP_Special_Project__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Special Project</label>
    <type>Checkbox</type>
</CustomField>