force-app/main/default/objects/Opportunity/fields/OPP_Tech_Nature__c.field-meta.xml
<CustomField>
    <fullName>OPP_Tech_Nature__c</fullName>
    <description>Champ mis à jour selon le domaine et sous domaine réalisé, afin de permettre l’interfaçage avec l&apos;ERP .</description>
    <label>OPP_Tech_Nature</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>PFI PRODUITS FINIS</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>CON CONTRAT</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>CRI COMPTE RENDU D&apos;INTERVENTION</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>PRE PIECES DE RECHANGE</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>PRO PRODUITS CONDITIONNEMENT</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>TFP TRAVAUX FORFAITAIRES PETIT TRAVAUX</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>REG REGIE</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>TFG GROS TRAVAUX</label>
            </value>
            <value>
                <fullName>9</fullName>
                <label>AUD Audit Chaufferie</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>FOR FORMATION</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>LOC LOCATION</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>