force-app/main/default/objects/Opportunity/fields/OPP_TermesDePaiement__c.field-meta.xml
<CustomField>
    <fullName>OPP_TermesDePaiement__c</fullName>
    <label>Termes de paiement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Échu</fullName>
            </value>
            <value>
                <fullName>A échoir</fullName>
            </value>
            <value>
                <fullName>A l&apos;intervention</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>