force-app/main/default/objects/Opportunity/fields/OPP_Type_de_concurrent__c.field-meta.xml
<CustomField>
    <fullName>OPP_Type_de_concurrent__c</fullName>
    <label>Type de concurrent</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Autres divers (loueur/TE/TA...)</fullName>
            </value>
            <value>
                <fullName>Constructeur</fullName>
            </value>
            <value>
                <fullName>Exploitant</fullName>
            </value>
            <value>
                <fullName>Installateur/Engineering</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>