force-app/main/default/objects/Opportunity/fields/OPP_Type_DS029__c.field-meta.xml
<CustomField>
    <fullName>OPP_Type_DS029__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Type DS029</label>
    <type>Checkbox</type>
</CustomField>