force-app/main/default/objects/Opportunity/fields/OpportunityNumber__c.field-meta.xml
<CustomField>
    <fullName>OpportunityNumber__c</fullName>
    <displayFormat>{0000000}</displayFormat>
    <label>Numéro opportunité</label>
    <type>AutoNumber</type>
</CustomField>