force-app/main/default/objects/Opportunity/fields/ProjetLie__c.field-meta.xml
<CustomField>
    <fullName>ProjetLie__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Projet Lié</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Opportunités Enfants</relationshipLabel>
    <relationshipName>OpportunitesEnfants</relationshipName>
    <type>Lookup</type>
</CustomField>