force-app/main/default/objects/Opportunity/fields/Quote_Revision_number__c.field-meta.xml
<CustomField>
    <fullName>Quote_Revision_number__c</fullName>
    <label>Quote Revision number</label>
    <summaryForeignKey>Quote.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>