force-app/main/default/objects/Opportunity/fields/Tech_Amount_OPP_status__c.field-meta.xml
<CustomField>
    <fullName>Tech_Amount_OPP_status__c</fullName>
    <formula>IF(ISPICKVAL( StageName , &apos;fermée perdue&apos;),Amount,
IF(ISPICKVAL( StageName , &apos;Sans Suite&apos;),  Amount , Forecast_amount__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tech_Amount OPP status</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>