force-app/main/default/objects/Opportunity/fields/TECH_Devis__c.field-meta.xml
<CustomField>
    <fullName>TECH_Devis__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TECH_Devis</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Opportunités</relationshipLabel>
    <relationshipName>Opportunit_s</relationshipName>
    <type>Lookup</type>
</CustomField>