force-app/main/default/objects/Opportunity/fields/TECH_OPP_NumeroAuto__c.field-meta.xml
<CustomField>
    <fullName>TECH_OPP_NumeroAuto__c</fullName>
    <displayFormat>OPP-BW-{0000000}</displayFormat>
    <label>TECH_OPP_NumeroAuto</label>
    <type>AutoNumber</type>
</CustomField>