force-app/main/default/objects/Opportunity/fields/TECH_OPP_OpportuniteChoisie__c.field-meta.xml
<CustomField>
    <fullName>TECH_OPP_OpportuniteChoisie__c</fullName>
    <formula>IF( (IsWon = TRUE), TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH_OPP_Opportunité Choisie</label>
    <type>Checkbox</type>
</CustomField>