force-app/main/default/objects/Opportunity/fields/Tech_OppProjet__c.field-meta.xml
<CustomField>
    <fullName>Tech_OppProjet__c</fullName>
    <formula>RecordType.Id = &quot;0120O0000003autQAA&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tech_OppProjet</label>
    <type>Checkbox</type>
</CustomField>