force-app/main/default/objects/Opportunity/recordTypes/OpportuniteEnfant.recordType-meta.xml
<RecordType>
    <fullName>OpportuniteEnfant</fullName>
    <active>true</active>
    <businessProcess>Processus de vente BW</businessProcess>
    <label>Opportunité enfant</label>
</RecordType>