force-app/main/default/objects/Opportunity/recordTypes/OpportuniteMultiple.recordType-meta.xml
<RecordType>
    <fullName>OpportuniteMultiple</fullName>
    <active>true</active>
    <businessProcess>Processus de vente BW</businessProcess>
    <label>Opportunité Parent</label>
</RecordType>