force-app/main/default/objects/Opportunity/recordTypes/OpportuniteSimple.recordType-meta.xml
<RecordType>
    <fullName>OpportuniteSimple</fullName>
    <active>true</active>
    <businessProcess>Processus de vente BW</businessProcess>
    <label>Opportunité Simple</label>
</RecordType>