force-app/main/default/objects/Opportunity/validationRules/VR02_OPP_ObligatoirePourFermeePerdue.validationRule-meta.xml
<ValidationRule>
    <fullName>VR02_OPP_ObligatoirePourFermeePerdue</fullName>
    <active>false</active>
    <description>Ensemble des champs obligatoires lors du passage de l&apos;opportunité à l&apos;étape &quot;Fermée/Perdue&quot;</description>
    <errorConditionFormula>AND(
				ISPICKVAL(OPP_MotifDeLaPerte__c,&quot;&quot;),
				 ISPICKVAL(StageName, &quot;Fermée Perdue&quot;),
				$User.USER_ByPassRegleValidation__c = FALSE)</errorConditionFormula>
    <errorMessage>Merci de renseigner un motif de perte avant de qualifier votre opportunité de &quot;Fermée/Perdue&quot;</errorMessage>
</ValidationRule>