force-app/main/default/objects/Opportunity/validationRules/VR04_DEV_PasDeNouveauDevisSurOppGagnee.validationRule-meta.xml
<ValidationRule>
    <fullName>VR04_DEV_PasDeNouveauDevisSurOppGagnee</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Compteur_Devis_Accepte__c &gt;1, 
$User.USER_ByPassRegleValidation__c = FALSE , 
IsWon = TRUE)</errorConditionFormula>
    <errorMessage>Attention, vous ne pouvez pas passer un nouveau devis &apos;Accepté&apos; sur la même opportunité gagnée. Il existe déjà un devis qui a été accepté sur cette opportunité gagnée.</errorMessage>
</ValidationRule>