force-app/main/default/objects/Opportunity/validationRules/VR04_OPP_NoSyncedQuoteAccepted.validationRule-meta.xml
<ValidationRule>
    <fullName>VR04_OPP_NoSyncedQuoteAccepted</fullName>
    <active>true</active>
    <errorConditionFormula>AND( $User.USER_ByPassRegleValidation__c = FALSE,
				 RecordType.DeveloperName = &quot;OpportuniteSimple&quot;,
				IsWon = TRUE,
				 NOT(ISPICKVAL(SyncedQuote.Status, &quot;3&quot;)))</errorConditionFormula>
    <errorMessage>Aucun devis n&apos;a été synchronisé avec votre opportunité.
Merci de passer un devis en &quot;Accepté&quot; avant de passer l&apos;opportunité en Fermée-Gagnée.</errorMessage>
</ValidationRule>