force-app/main/default/objects/Opportunity/validationRules/VR12_OPP_SDTVA_0ServicesHFFactureFrance.validationRule-meta.xml
<ValidationRule>
    <fullName>VR12_OPP_SDTVA_0ServicesHFFactureFrance</fullName>
    <active>true</active>
    <description>0%BWF - Services HF - Factu France</description>
    <errorConditionFormula>AND( 
ISPICKVAL(Type,&quot;8&quot;), 
$User.USER_ByPassRegleValidation__c = FALSE, 
NOT(ISPICKVAL( OPP_SousDomaine__c , &quot;16&quot;)),
NOT(ISPICKVAL( OPP_SousDomaine__c , &quot;18&quot;)), 
NOT(ISPICKVAL( OPP_SousDomaine__c , &quot;19&quot;)), 
NOT(ISPICKVAL( OPP_SousDomaine__c , &quot;20&quot;)), 
NOT(ISPICKVAL( OPP_SousDomaine__c , &quot;21&quot;)), 
NOT(ISPICKVAL( OPP_SousDomaine__c , &quot;28&quot;)), 
NOT(ISPICKVAL( OPP_SousDomaine__c , &quot;31&quot;)), 
NOT(ISPICKVAL( OPP_SousDomaine__c , &quot;36&quot;)), 
NOT(ISPICKVAL( OPP_SousDomaine__c , &quot;40&quot;)), 
NOT(ISPICKVAL( OPP_SousDomaine__c , &quot;46&quot;)), 
NOT(ISPICKVAL( OPP_SousDomaine__c , &quot;47&quot;)), 
NOT(ISPICKVAL( OPP_SousDomaine__c , &quot;49&quot;)), 
NOT(ISPICKVAL( OPP_SousDomaine__c , &quot;54&quot;)))</errorConditionFormula>
    <errorDisplayField>Type</errorDisplayField>
    <errorMessage>Attention, le Type de TVA  ne peut pas être sélectionné pour ce Sous-domaine, merci de le corriger.</errorMessage>
</ValidationRule>