force-app/main/default/objects/Opportunity/validationRules/VR15_OPP_SDTVA_10BWF.validationRule-meta.xml
<ValidationRule>
    <fullName>VR15_OPP_SDTVA_10BWF</fullName>
    <active>false</active>
    <description>10%BWF</description>
    <errorConditionFormula>AND(
ISPICKVAL(Type,&quot;2&quot;),
$User.USER_ByPassRegleValidation__c = FALSE,
NOT(ISPICKVAL( OPP_SousDomaine__c , &quot;1&quot;)),
NOT(ISPICKVAL( OPP_SousDomaine__c , &quot;2&quot;)),
NOT(ISPICKVAL( OPP_SousDomaine__c , &quot;3&quot;)),
NOT(ISPICKVAL( OPP_SousDomaine__c , &quot;4&quot;)),
NOT(ISPICKVAL( OPP_SousDomaine__c , &quot;5&quot;)),
NOT(ISPICKVAL( OPP_SousDomaine__c , &quot;6&quot;)),
NOT(ISPICKVAL( OPP_SousDomaine__c , &quot;7&quot;)),
NOT(ISPICKVAL( OPP_SousDomaine__c , &quot;8&quot;)),
NOT(ISPICKVAL( OPP_SousDomaine__c , &quot;9&quot;)),
NOT(ISPICKVAL( OPP_SousDomaine__c , &quot;10&quot;)),
NOT(ISPICKVAL( OPP_SousDomaine__c , &quot;11&quot;)),
NOT(ISPICKVAL( OPP_SousDomaine__c , &quot;12&quot;)),
NOT(ISPICKVAL( OPP_SousDomaine__c , &quot;13&quot;)),
NOT(ISPICKVAL( OPP_SousDomaine__c , &quot;14&quot;)),
NOT(ISPICKVAL( OPP_SousDomaine__c , &quot;15&quot;)),
NOT(ISPICKVAL( OPP_SousDomaine__c , &quot;17&quot;)),
NOT(ISPICKVAL( OPP_SousDomaine__c , &quot;18&quot;)),
NOT(ISPICKVAL( OPP_SousDomaine__c , &quot;19&quot;)),
NOT(ISPICKVAL( OPP_SousDomaine__c , &quot;20&quot;)),
NOT(ISPICKVAL( OPP_SousDomaine__c , &quot;21&quot;)),
NOT(ISPICKVAL( OPP_SousDomaine__c , &quot;22&quot;)),
NOT(ISPICKVAL( OPP_SousDomaine__c , &quot;23&quot;)),
NOT(ISPICKVAL( OPP_SousDomaine__c , &quot;24&quot;)),
NOT(ISPICKVAL( OPP_SousDomaine__c , &quot;25&quot;)),
NOT(ISPICKVAL( OPP_SousDomaine__c , &quot;26&quot;)),
NOT(ISPICKVAL( OPP_SousDomaine__c , &quot;27&quot;)),
NOT(ISPICKVAL( OPP_SousDomaine__c , &quot;28&quot;)),
NOT(ISPICKVAL( OPP_SousDomaine__c , &quot;30&quot;)),
NOT(ISPICKVAL( OPP_SousDomaine__c , &quot;31&quot;)),
NOT(ISPICKVAL( OPP_SousDomaine__c , &quot;32&quot;)),
NOT(ISPICKVAL( OPP_SousDomaine__c , &quot;33&quot;)),
NOT(ISPICKVAL( OPP_SousDomaine__c , &quot;36&quot;)),
NOT(ISPICKVAL( OPP_SousDomaine__c , &quot;37&quot;)),
NOT(ISPICKVAL( OPP_SousDomaine__c , &quot;38&quot;)),
NOT(ISPICKVAL( OPP_SousDomaine__c , &quot;39&quot;)),
NOT(ISPICKVAL( OPP_SousDomaine__c , &quot;40&quot;)),
NOT(ISPICKVAL( OPP_SousDomaine__c , &quot;41&quot;)),
NOT(ISPICKVAL( OPP_SousDomaine__c , &quot;42&quot;)),
NOT(ISPICKVAL( OPP_SousDomaine__c , &quot;45&quot;)),
NOT(ISPICKVAL( OPP_SousDomaine__c , &quot;46&quot;)),
NOT(ISPICKVAL( OPP_SousDomaine__c , &quot;47&quot;)),
NOT(ISPICKVAL( OPP_SousDomaine__c , &quot;49&quot;)),
NOT(ISPICKVAL( OPP_SousDomaine__c , &quot;51&quot;)),
NOT(ISPICKVAL( OPP_SousDomaine__c , &quot;52&quot;)),
NOT(ISPICKVAL( OPP_SousDomaine__c , &quot;54&quot;)))</errorConditionFormula>
    <errorDisplayField>Type</errorDisplayField>
    <errorMessage>Attention, le Type de TVA  ne peut pas être sélectionné pour ce Sous-domaine, merci de le corriger.</errorMessage>
</ValidationRule>